# NetspiderHSI

./: .gitignore  LICENSE  NetSpiderInstallerScript.iss  README.md  Ui_HSIWebScraper.ui  app.py  index.html  index.js  index_jr.html  keyword_sets.txt  keywords.txt  main.js  main.py  ns.icns  package-lock.json  package.json  preload.js  renderer.js  renderer1.js  requirements.txt  scraper.js  scraperEvent.js  test.html  textfile.html
Backend/: ScraperPrototype.py  appendCleanResults.py  appendResultScreenshots.py  appendResults.py  makeDiagrams.py  openCleanResults.py  (+3 more)
server/: app.py  auto.py  folders.json  pyproject.toml  requirements.txt  scheduled_scrapers.json  scraper.js  scraper_schedule.json  test_scrapers.py
server/.github/: NetSpiderInstallerScript.iss  README.md
server/.github/client/: index.css  package-lock.json  package.json
server/.github/client/dashboard/css/: website.css
server/Backend/: Facade.py  Keywords.py  ScraperPrototype.py  __init__.py  database.py  docker-compose.yml
server/Backend/Scraper/: ErosScraper.py  EscortalligatorScraper.py  MegapersonalsScraper.py  RubratingsScraper.py  SkipthegamesScraper.py  YesbackpageScraper.py  __init__.py
server/Backend/resultManager/: appendResultPDFPrototype.py  appendResults.py  keywordBERTModel.py  makeDiagrams.py  openResultPDF.py  resultDirectoryList.py  resultManager.py
server/Backend/schema/: README.md  __init__.py  v00.sql  v01.sql  v01_rubratings_provider_id_varchar.sql
server/doc/: database_schema.md  postgresql_installation.md  schema_migration.md
server/scripts/: bundle.py
(+128 files in other folders)
