[project]
name = 'netspiderhsi'
version = '3.0.2'
requires-python = '>=3.11'
# List direct dependencies and desired optional dependencies. For future
# reference, list dependent packages next to desired optional dependencies.
dependencies = [
  'eventlet', # For 'Flask-SocketIO', 'python-engineio', 'python-socketio'
  'Flask',
  'Flask-Cors',
  'Flask-SocketIO',
  'gevent',
  'gevent-websocket', # For 'Flask-SocketIO', 'python-engineio'
  'img2pdf',
  'matplotlib',
  'numpy',
  'openpyxl',
  'pandas',
  'psutil', # For 'gevent'
  'pyinstaller',
  'PyPDF2',
  'PyQt5',
  'PySocks', # For 'urllib3'
  'seaborn',
  'selenium',
  'seleniumbase',
  'watchdog',
]
